objects/ASI_CRM_Inventory_Visibility_Junction__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_API_Type__c</fullName>
        <formula>ASI_CRM_Detail__r.ASI_CRM_Inventory_Visibility__r.ASI_CRM_API_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Auto_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <formula>CASE(
ASI_CRM_Sequence__c,
1,ASI_CRM_Open_PO_Date__c, 
2,ASI_CRM_ETA_Date__c, 
4,ASI_CRM_IDF_Date__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Detail_QTY_Duty_Free__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Free&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[V2] Detail QTY (Duty Free)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Detail_QTY_Duty_Paid__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Paid&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[V2] Detail QTY (Duty Paid)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Detail_QTY_In_transit__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;PO Intransit&apos;),ASI_CRM_Detail_QTY__c,0) -
IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;PO Move to DF&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[V2] Detail QTY (In-transit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Detail_QTY_Open_PO__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Open PO&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[V2] Detail QTY (Open PO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Detail_QTY_Pending__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;PO Move to Pending&apos;),ASI_CRM_Detail_QTY__c,0) - 
IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;PO Move to DP&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[V2] Detail QTY (Pending)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Detail_QTY__c</fullName>
        <formula>IF(ASI_CRM_Exclude_API_Type__c||ASI_CRM_Exclude_Operation_Type__c
,0
,ASI_CRM_Detail__r.ASI_CRM_Purchase_QTY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Detail__c</fullName>
        <label>Detail</label>
        <referenceTo>ASI_CRM_Inventory_Visibility_Detail__c</referenceTo>
        <relationshipLabel>Inventory Visibility Junction</relationshipLabel>
        <relationshipName>Inventory_Visibility_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ETA_Date__c</fullName>
        <formula>ASI_CRM_Detail__r.ASI_CRM_Inventory_Visibility__r.ASI_CRM_ETA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Estimated_Date_In_transit__c</fullName>
        <formula>ASI_CRM_ETA_Date__c + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Date (In-transit)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Estimated_Date_Open_PO__c</fullName>
        <formula>ASI_CRM_Open_PO_Date__c - ASI_CRM_Item_Group__r.ASI_CRM_Request_Dispatch_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Date (Open PO)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Estimated_Date_Pending__c</fullName>
        <formula>ASI_CRM_IDF_Date__c + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Date (Pending)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Estimated_Date__c</fullName>
        <formula>CASE(
ASI_CRM_Sequence__c,
1,ASI_CRM_Estimated_Date_Open_PO__c, 
2,ASI_CRM_Estimated_Date_In_transit__c, 
4,ASI_CRM_Estimated_Date_Pending__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude_API_Type__c</fullName>
        <formula>IF(LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;PWC_IN_IRF_4&apos;)
||LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;PWC_UP_JDE_PO_2&apos;)
||LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;PWC_IN_OB_12&apos;)
,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude API Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude_Operation_Type__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;PO Add Duty&apos;)
||LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;PO Add IE&apos;)
||LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;PO Add Consumer Tax&apos;)
||LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;PO Move to Pending&apos;)
,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Operation Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IDF_Date__c</fullName>
        <formula>ASI_CRM_Detail__r.ASI_CRM_Inventory_Visibility__r.ASI_CRM_IDF_Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDF Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ignore_Count_Open_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Count (Open PO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Inventory Visibility Junction</relationshipLabel>
        <relationshipName>Inventory_Visibility_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Location_Code__c</fullName>
        <formula>ASI_CRM_Warehouse__r.ASI_MFM_Location_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Open_PO_Date__c</fullName>
        <formula>ASI_CRM_Detail__r.ASI_CRM_Inventory_Visibility__r.ASI_CRM_Request_ETA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Operation_Type__c</fullName>
        <formula>ASI_CRM_Detail__r.ASI_CRM_Inventory_Visibility__r.ASI_CRM_Operation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QTY_Duty_Free__c</fullName>
        <label>[V2] QTY (Duty Free)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QTY_Duty_Paid__c</fullName>
        <label>[V2] QTY (Duty Paid)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QTY_In_transit__c</fullName>
        <label>[V2] QTY (In-transit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QTY_Open_PO__c</fullName>
        <label>[V2] QTY (Open PO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QTY_Pending__c</fullName>
        <label>[V2] QTY (Pending)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QTY__c</fullName>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_DF__c</fullName>
        <formula>OR(ASI_CRM_V1_QTY_DF__c!=ASI_CRM_V1_Detail_QTY_DF__c, 
ASI_CRM_QTY_Duty_Free__c!=ASI_CRM_Detail_QTY_Duty_Free__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (DF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_DP_D2C__c</fullName>
        <formula>ASI_CRM_V1_QTY_DP_D2C__c!=ASI_CRM_V1_Detail_QTY_DP_D2C__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (DP D2C)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_DP_EC__c</fullName>
        <formula>ASI_CRM_V1_QTY_DP_EC__c!=ASI_CRM_V1_Detail_QTY_DP_EC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (DP EC warehouse)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_DP_IHBR__c</fullName>
        <formula>ASI_CRM_V1_QTY_DP_IHBR__c!=ASI_CRM_V1_Detail_QTY_DP_IHBR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (DP IHBR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_DP_MOT_Banner__c</fullName>
        <formula>ASI_CRM_V1_QTY_DP_MOT_Banner__c!=ASI_CRM_V1_Detail_QTY_DP_MOT_Banner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (DP MOT_Banner warehouse)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_DP_Normal__c</fullName>
        <formula>ASI_CRM_V1_QTY_DP_Normal__c!=ASI_CRM_V1_Detail_QTY_DP_Normal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (DP Normal warehouse)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_DP_VIP__c</fullName>
        <formula>ASI_CRM_V1_QTY_DP_VIP__c!=ASI_CRM_V1_Detail_QTY_DP_VIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (DP VIP warehouse)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_DP__c</fullName>
        <formula>ASI_CRM_QTY_Duty_Paid__c!=ASI_CRM_Detail_QTY_Duty_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (DP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_In_transit__c</fullName>
        <formula>OR(ASI_CRM_V1_QTY_In_transit__c!=ASI_CRM_V1_Detail_QTY_In_transit__c, 
ASI_CRM_QTY_In_transit__c!=ASI_CRM_Detail_QTY_In_transit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (In-transit)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_Open_PO__c</fullName>
        <formula>OR(ASI_CRM_V1_QTY_Open_PO__c!=ASI_CRM_V1_Detail_QTY_Open_PO__c,
ASI_CRM_QTY_Open_PO__c!=ASI_CRM_Detail_QTY_Open_PO__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (Open PO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate_Pending__c</fullName>
        <formula>OR(ASI_CRM_V1_QTY_Pending__c!=ASI_CRM_V1_Detail_QTY_Pending__c, 
ASI_CRM_QTY_Pending__c!= ASI_CRM_Detail_QTY_Pending__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate (Pending)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recalculate__c</fullName>
        <formula>ASI_CRM_QTY__c != ASI_CRM_Detail_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Inventory Visibility Junction</relationshipLabel>
        <relationshipName>Inventory_Visibility_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <formula>CASE(
LOWER(ASI_CRM_API_Type__c),
LOWER(&apos;OPEN PO&apos;),1,
LOWER(&apos;JDE_IN_PO_1&apos;),2,
LOWER(&apos;3PL_IN_PO2DF_6&apos;),2,
LOWER(&apos;Duty Free&apos;),3,
LOWER(&apos;PWC_IN_IDF_8&apos;),4,
LOWER(&apos;3PL_IN_TAX_12&apos;),4,
LOWER(&apos;Duty Paid&apos;),5,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <formula>CASE(
LOWER(ASI_CRM_API_Type__c),
LOWER(&apos;OPEN PO&apos;),&apos;OPEN PO&apos;,
LOWER(&apos;JDE_IN_PO_1&apos;),&apos;IN-TRANSIT&apos;,
LOWER(&apos;3PL_IN_PO2DF_6&apos;),&apos;IN-TRANSIT&apos;,
LOWER(&apos;Duty Free&apos;),&apos;Duty Free&apos;,
LOWER(&apos;PWC_IN_IDF_8&apos;),&apos;PENDING&apos;,
LOWER(&apos;3PL_IN_TAX_12&apos;),&apos;PENDING&apos;,
LOWER(&apos;Duty Paid&apos;),&apos;Duty Paid&apos;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Summary__c</fullName>
        <label>Summary</label>
        <referenceTo>ASI_CRM_Inventory_Visibility_Summary__c</referenceTo>
        <relationshipLabel>Inventory Visibility Junction</relationshipLabel>
        <relationshipName>Inventory_Visibility_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_DF__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Free&apos;),ASI_CRM_Detail_QTY__c,0)
-IF(LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;PWC_IN_IDF_8&apos;),ASI_CRM_Detail_QTY__c,0)
+IF(LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;3PL_IN_TAX_12&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (DF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_DP_D2C__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Paid&apos;) &amp;&amp; ISPICKVAL(ASI_CRM_Warehouse__r.ASI_FOC_Status__c,&apos;DP D2C&apos;) 
,ASI_CRM_Detail_QTY__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (DP D2C)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_DP_EC__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Paid&apos;) 
&amp;&amp; ISPICKVAL(ASI_CRM_Warehouse__r.ASI_FOC_Status__c,&apos;DP EC warehouse&apos;) 
,ASI_CRM_Detail_QTY__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (DP EC warehouse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_DP_IHBR__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Paid&apos;) 
&amp;&amp; ISPICKVAL(ASI_CRM_Warehouse__r.ASI_FOC_Status__c,&apos;DP IHBR&apos;) 
,ASI_CRM_Detail_QTY__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (DP IHBR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_DP_MOT_Banner__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Paid&apos;) 
&amp;&amp; ISPICKVAL(ASI_CRM_Warehouse__r.ASI_FOC_Status__c,&apos;DP MOT_Banner&apos;) 
,ASI_CRM_Detail_QTY__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (DP MOT_Banner warehouse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_DP_Normal__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Paid&apos;) 
&amp;&amp; ISPICKVAL(ASI_CRM_Warehouse__r.ASI_FOC_Status__c,&apos;DP Normal warehouse&apos;) 
,ASI_CRM_Detail_QTY__c
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (DP Normal warehouse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_DP_VIP__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Duty Paid&apos;) 
&amp;&amp; ISPICKVAL(ASI_CRM_Warehouse__r.ASI_FOC_Status__c,&apos;DP VIP warehouse&apos;) 
,ASI_CRM_Detail_QTY__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (DP VIP warehouse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_In_transit__c</fullName>
        <formula>IF(LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;JDE_IN_PO_1&apos;),ASI_CRM_Detail_QTY__c,0)-IF(LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;3PL_IN_PO2DF_6&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (In-transit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_Open_PO__c</fullName>
        <formula>IF(LOWER(ASI_CRM_Operation_Type__c)==LOWER(&apos;Open PO&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (Open PO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_Detail_QTY_Pending__c</fullName>
        <formula>IF(LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;PWC_IN_IDF_8&apos;),ASI_CRM_Detail_QTY__c,0) 
-IF(LOWER(ASI_CRM_API_Type__c)==LOWER(&apos;3PL_IN_TAX_12&apos;),ASI_CRM_Detail_QTY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail QTY (Pending)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_DF__c</fullName>
        <label>QTY (DF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_DP_D2C__c</fullName>
        <label>QTY (DP D2C)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_DP_EC__c</fullName>
        <label>QTY (DP EC warehouse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_DP_IHBR__c</fullName>
        <label>QTY (DP IHBR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_DP_MOT_Banner__c</fullName>
        <label>QTY (DP MOT_Banner warehouse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_DP_Normal__c</fullName>
        <label>QTY (DP Normal warehouse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_DP_VIP__c</fullName>
        <label>QTY (DP VIP warehouse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_In_transit__c</fullName>
        <label>QTY (In-transit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_Open_PO__c</fullName>
        <label>QTY (Open PO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_V1_QTY_Pending__c</fullName>
        <label>QTY (Pending)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WH_Code__c</fullName>
        <formula>ASI_CRM_Detail__r.ASI_CRM_Inventory_Visibility__r.ASI_CRM_WH_Code_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WH Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>ASI_FOC_Warehouse__c</referenceTo>
        <relationshipLabel>Inventory Visibility Junction</relationshipLabel>
        <relationshipName>Inventory_Visibility_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Visibility Junction</label>
    <nameField>
        <displayFormat>IVJ{00000000}</displayFormat>
        <label>Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Visibility Junction</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Junction</fullName>
        <active>true</active>
        <label>CN Junction</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>